# pydantic-core

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  control  demo.py  demo.rs  experiment_bench.py  generate_schema_definition.py  generate_self_schema.py  index.html  package.json  pyproject.toml  run_tests_browser.html  temp.md  temp.py  test2.py  test_fraction_decimal.py  update_configs.py
.cargo/: config.toml
.github/: FUNDING.yml  check_version.py  set_version.py
.github/workflows/: benchmarks.yml  ci.yml  codspeed.yml
benches/: main.rs
benchmarks/: minimal.py  plain_onion.py  run.py
dev/bench/: data.js
profiling/: dict_model.py
pydantic-core-stubs/: README.md  pyproject.toml
pydantic-core-stubs/pydantic_core-stubs/: __init__.pyi  _pydantic_core.pyi  core_schema.pyi
pydantic_core/: __init__.py  _pydantic_core.pyi  _types.py  core_schema.py  schema_types.py  utils.py
python/pydantic_core/: __init__.py  _pydantic_core.pyi  core_schema.py  exception_groups.py
src/: args_kwargs.rs  argument_markers.rs  build_context.rs  build_macros.rs  build_tools.rs  config.rs  core.rs  data_value.rs  definitions.rs  email.rs  experiment.rs  fast_dict.rs  hashed_any.rs  json.rs  lazy_index_map.rs  lib.rs  location.rs  lookup_key.rs  model.rs  onion.rs  py_gc.rs  py_string_cache.rs  py_vectorcall.rs  questions.rs  recursion_guard.rs  schema_traverse.rs  standalone_validators.rs  tools.rs  url.rs  url_type.rs  user_config.rs  uuid.rs  validate.rs  validators.rs  walk_core_schema.rs
src/common/: discriminator.rs  mod.rs  prebuilt.rs  unset_sentinel.rs
src/errors/: exception_group.rs  exceptions.rs  kinds.rs  line_error.rs  location.rs  mod.rs  msg_context.rs  types.rs  val_error.rs  validation_exception.rs  value_exception.rs
src/input/: _pyo3_dict.rs  any_iterable.rs  datetime.rs  email.rs  generic_dict.rs  generic_iterable.rs  generic_list.rs  generics.rs  input_abstract.rs  input_json.rs  input_python.rs  input_string.rs  iterator.rs  json.rs  mod.rs  parse_json.rs  py_string_cache.rs  python.rs  return_enums.rs  shared.rs  traits.rs
test_transformer/: core_schema_gen.py  schema_collector.py  transform.py
tests/: check-debug.sh  conftest.py  emscripten_runner.js  noxfile.py  prepare_coverage.sh  requirements-linting.txt  requirements.txt  rust_coverage_export.sh  rust_coverage_html.sh  setup_pyodide.py  snapshot.py  test.rs  test_benchmark.py  test_benchmarks.py  test_build.py  test_config.py  test_config_updated.py  test_custom_errors.py  test_docstrings.py  test_errors.py  test_exception_group.py  test_functions.py  test_garbage_collection.py  test_gather_schemas_for_cleaning.py  test_hypothesis.py  test_isinstance.py  test_json.py  test_main.py  test_misc.py  test_model.py  test_pickling.py  test_prebuilt.py  test_recursive.py  test_schema_functions.py  test_strict.py  test_typing.py  test_tzinfo.py  test_union.py  test_utils.py  test_validate_strings.py  (+2 more)
wasm-preview/: README.md  index.html  run_tests.py  upload.py  worker.js
wasm-preview-v0.25/: README.md  worker.js
(+278 files in other folders)
